--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
       <span class="line"></span>
     </div>
     <ul class="nav-bar">
-      <li><a class="aboutLink menu" href="#aboutSection">ABOUT</a></li>
-      <li><a class="skillsLink menu" href="#skillsSection">TOOLS</a></li>
+      <li><a class="aboutLink menu" href="#aboutSection">SOBRE MÍ</a></li>
+      <li><a class="skillsLink menu" href="#skillsSection">HERRAMIENTAS</a></li>
       <li><a class="projectsLink menu" href="#projectsSection">PROYECTOS</a></li>
       <li><a class="contactLink menu" href="#contactSection">CONTACTO</a></li>
     </ul>
@@ -81,7 +81,7 @@
       <!-- Tools -->
       <div id="skillsSection" class="topper"></div>
       <section  class="skills" data-aos="fade-up">
-        <h3>TOOLS</h3>
+        <h3>HERRAMIENTAS</h3>
           <div class="icon-container col s3 m2" data-aos="zoom-in" data-aos-duration="1500">
             <img src="src/img/HTML.png" alt="">
             <p>HTML 5</p>
