--- a/index.html
+++ b/index.html
@@ -136,8 +136,8 @@
               <figcaption>
                 <h4>FOOD MAP</h4>
                 <p>App que utiliza Google Maps para buscar lugares de comida con geolocalización y preferencias personales.</p>
-                <a href="https://elizabethvegam.github.io/scl-2018-01-foodmap/" target="_blank" class="waves-effect waves-light btn">DEMO</a>
-                <a href="https://github.com/ElizabethVegaM/scl-2018-01-foodmap" target="_blank" class="waves-effect waves-light btn">CODE</a>
+                <a href="https://elizabethvegam.github.io/foodmap" target="_blank" class="waves-effect waves-light btn">DEMO</a>
+                <a href="https://github.com/ElizabethVegaM/foodmap" target="_blank" class="waves-effect waves-light btn">CODE</a>
               </figcaption>
               <a href="#"></a>
             </figure>
@@ -149,8 +149,8 @@
               <figcaption>
                 <h4>IF Visitors</h4>
                 <p>App que registra visitantes del edificio IF Blanco para mejorar la seguridad en el acceso al recinto.</p>
-                <a href="https://registro-visitantes.firebaseapp.com/" target="_blank" class="waves-effect waves-light btn">DEMO</a>
-                <a href="https://github.com/ElizabethVegaM/scl-2018-01-ProyectoFinalCore" target="_blank" class="waves-effect waves-light btn">CODE</a>
+                <a href="https://registro-visitantes.firebaseapp.com" target="_blank" class="waves-effect waves-light btn">DEMO</a>
+                <a href="https://github.com/ElizabethVegaM/registro-visitantes-if" target="_blank" class="waves-effect waves-light btn">CODE</a>
               </figcaption>
               <a href="#"></a>
             </figure>
@@ -162,8 +162,8 @@
               <figcaption>
                 <h4>ConectApp</h4>
                 <p>Red social enfocada en la comunidad escolar que mejora la comunicación entre alumnos y sus profesores.</p>
-                <a href="https://social-network-d7373.firebaseapp.com/" target="_blank" class="waves-effect waves-light btn">DEMO</a>
-                <a href="https://github.com/ElizabethVegaM/scl-2018-05-bc-core-am-socialnetwork" target="_blank" class="btn">CODE</a>
+                <a href="https://social-network-d7373.firebaseapp.com" target="_blank" class="waves-effect waves-light btn">DEMO</a>
+                <a href="https://github.com/ElizabethVegaM/conectapp-alumnos" target="_blank" class="btn">CODE</a>
               </figcaption>
             </figure>
           </div>
@@ -177,7 +177,7 @@
                 <h4>MD-Links</h4>
                 <p>Pequeña librería que analiza archivos de tipo .md para verificar los links que contengan y entregar algunas estadísticas.</p>
                 <a href="https://www.npmjs.com/package/theraven-md-links" target="_blank" class="waves-effect waves-light btn">DEMO</a>
-                <a href="https://github.com/ElizabethVegaM/scl-2018-01-FE-markdown" target="_blank" class="btn">CODE</a>
+                <a href="https://github.com/ElizabethVegaM/markdown-links" target="_blank" class="btn">CODE</a>
               </figcaption>
             </figure>
           </div>
