--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   <link rel="stylesheet" href="src/css/styles.css">
   <link rel="stylesheet" href="src/css/grid.css">
   <link rel="stylesheet" href="src/css/navbar.css">
+  <link rel="stylesheet" href="src/css/banner.css">
 </head>
 
 <body>
@@ -32,37 +33,41 @@
         <div class="mobile-toggle"> <span></span> <span></span> <span></span> </div>
         <nav>
           <ul>
-            <li><a class="smoothscroll" href="#header">Home</a></li>
-            <li><a class="smoothscroll" href="#about">About</a></li>
-            <li><a class="smoothscroll" href="#skills">Services</a></li>
-            <li><a class="smoothscroll" href="#portfolio">Work</a></li>
-            <li><a class="smoothscroll" href="#contact">Contact</a></li>
+            <li><a class="smoothscroll link-animation" href="#header">Home</a></li>
+            <li><a class="smoothscroll link-animation" href="#about">Sobre Mí</a></li>
+            <li><a class="smoothscroll link-animation" href="#portfolio">Proyectos</a></li>
+            <li><a class="smoothscroll link-animation" href="#skills">Herramientas</a></li>
+            <li><a class="smoothscroll link-animation" href="#contact">Contacto</a></li>
           </ul>
         </nav>
       </div>
     </div>
-    <div class="background-container"></div>
-    <div class="title">
-      <h1 class="heading"> Elizabeth Vega</h1>
-      <h2 class="heading">FRONT-END DEVELOPER</h2>
-      <a class="smoothscroll" href="#about">
-        <div class="mouse">
-          <div class="wheel"></div>
+    <div class="banner">
+      <div class="banner__overlay">
+        <div class="banner__container">
+          <div class="title">
+            <h1 class="heading"> Elizabeth Vega</h1>
+            <h2 class="heading">FRONT-END DEVELOPER</h2>
+            <a class="smoothscroll" href="#about">
+              <div class="mouse">
+                <div class="wheel"></div>
+              </div>
+            </a>
+          </div>
         </div>
-      </a>
+        <a class="smoothscroll" href="#about">
+          <div class="scroll-down"></div>
+        </a>
+      </div>
     </div>
-    <a class="smoothscroll" href="#about">
-      <div class="scroll-down"></div>
-    </a>
   </header>
 
-  <!-- About Section
-–––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <!-- About Me -->
 
   <section id="about">
     <div class="container">
       <div class="row">
-        <h1>About</h1>
+        <h1>About Me</h1>
         <div class="block"></div>
         <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et
           dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet
@@ -298,7 +303,7 @@
     integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <script src="src/app.js"></script>
-  <!-- <script src="src/background.js"></script> -->
+  <script src="src/background.js"></script>
 
 </body>
 
