--- a/index.html
+++ b/index.html
@@ -21,12 +21,7 @@
 </head>
 
 <body>
-  <!-- Header Section
-–––––––––––––––––––––––––––––––––––––––––––––––––– -->
-
-  <!-- Header Section
-–––––––––––––––––––––––––––––––––––––––––––––––––– -->
-
+  <!-- Header -->
   <header id="header">
     <div class="main_nav">
       <div class="container">
@@ -36,7 +31,6 @@
             <li><a class="smoothscroll link-animation" href="#header">Home</a></li>
             <li><a class="smoothscroll link-animation" href="#about">Sobre Mí</a></li>
             <li><a class="smoothscroll link-animation" href="#portfolio">Proyectos</a></li>
-            <li><a class="smoothscroll link-animation" href="#skills">Herramientas</a></li>
             <li><a class="smoothscroll link-animation" href="#contact">Contacto</a></li>
           </ul>
         </nav>
@@ -63,41 +57,62 @@
   </header>
 
   <!-- About Me -->
-
   <section id="about">
     <div class="container">
       <div class="row">
-        <h1>About Me</h1>
-        <div class="block"></div>
-        <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et
-          dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet
-          clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
+        <div class="six columns">
+          <h1>Sobre Mí</h1>
+          <div class="block"></div>
+          <p>Front-End Developer enfocada en el desarrollo de páginas y aplicaciones web de calidad, dinámicas y con un
+            alto enfoque en el usuario final. Busco combinar las mejores herramientas digitales de acuerdo a los
+            requerimientos del cliente.</p>
+          <p>Soy una persona curiosa en constante búsqueda de nuevos conocimientos, fascinada por el alcance de la
+            tecnología actual y cómo aporta a la vida de las personas.</p>
+        </div>
+        <div class="six columns">
+          <figure class="picture-animation">
+            <img src="src/img/profile.jpg" alt="profile-picture"/>
+          </figure>
+        </div>
       </div>
       <div class="row">
-        <div class="six columns">
-          <h3><span class="typcn typcn-device-desktop icon"></span>Our Process</h3>
-          <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem
-            aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.
-          </p>
-        </div>
-        <div class="six columns">
-          <h3><span class="typcn typcn-pen icon"></span>Our Approach</h3>
-          <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem
-            aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.
-          </p>
-        </div>
         <div class="row">
-          <div class="six columns">
-            <h3><span class="typcn typcn-cog-outline icon"></span>Our Goal</h3>
-            <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam
-              rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt
-              explicabo.</p>
-          </div>
-          <div class="six columns">
-            <h3><span class="typcn typcn-lightbulb icon"></span>Our Mission</h3>
-            <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam
-              rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt
-              explicabo.</p>
+          <div class="twelve.columns">
+            <h3><span class="iconify icon" data-icon="typcn-device-desktop" data-inline="true"></span>Herramientas</h3>
+            <div class="row">
+              <div class="one.column icon-container">
+                <img src="src/img/2333390-html-html5-internet-website_85590.ico" alt="">
+              </div>
+              <div class="one.column icon-container">
+                <img src="src/img/2333399-code-css-css3-internet-websi_85585.ico" alt="">
+              </div>
+              <div class="one.column icon-container">
+                <img src="src/img/language_javascript_icon_135455.ico" alt="">
+              </div>
+              <div class="one.column icon-container">
+                <img src="src/img/Node-JS.png" alt="">
+              </div>
+              <div class="one.column icon-container">
+                <img src="src/img/react_icon_135264.ico" alt="">
+              </div>
+              <div class="one.column icon-container">
+                <img src="src/img/firebase_icon_134985.ico" alt="">
+              </div>
+              <div class="one.column icon-container">
+                <img src="src/img/github-1_icon-icons.com_71186.ico" alt="">
+              </div>
+              <div class="one.column icon-container">
+                <img src="src/img/markgithub_106479.ico" alt="">
+              </div>
+              <div class="one.column icon-container">
+                <img src="src/img/bootstrap_icon_135870.ico" alt="">
+              </div>
+              <div class="one.column icon-container">
+                <img src="src/img/material_ui_icon_137419.ico" alt="">
+              </div>
+              <div class="one.column icon-container"></div>
+              <div class="one.column icon-container"></div>
+            </div>
           </div>
         </div>
       </div>
@@ -301,6 +316,8 @@
   <!-- Compiled and minified JavaScript -->
   <script src="https://code.jquery.com/jquery-3.3.1.min.js"
     integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+  <!-- Icons -->
+  <script src="https://code.iconify.design/1/1.0.4/iconify.min.js"></script>
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <script src="src/app.js"></script>
   <script src="src/background.js"></script>
