--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-  <title>Elizabeth Vega</title>
+  <title>Elizabeth Vega Portafolio</title>
   <!-- Tipografía -->
+  <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css?family=Advent+Pro:200,400,700|Niramit" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Kranky&display=swap" rel="stylesheet">
   <!-- Íconos -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css"
@@ -23,7 +25,7 @@
 <body>
   <!-- Header -->
   <header id="header">
-    <div class="main_nav">
+    <section class="main_nav">
       <div class="container">
         <div class="mobile-toggle"> <span></span> <span></span> <span></span> </div>
         <nav>
@@ -35,13 +37,13 @@
           </ul>
         </nav>
       </div>
-    </div>
-    <div class="banner">
+    </section>
+    <section class="banner">
       <div class="banner__overlay">
         <div class="banner__container">
           <div class="title">
-            <h1 class="heading"> Elizabeth Vega</h1>
-            <h2 class="heading">FRONT-END DEVELOPER</h2>
+            <h1 class="heading"> Hello! My name is <span>Elizabeth</span></h1>
+            <h2 class="heading">and I'm a <span>Front End Developer</span> from Chile</h2>
             <a class="smoothscroll" href="#about">
               <div class="mouse">
                 <div class="wheel"></div>
@@ -53,12 +55,12 @@
           <div class="scroll-down"></div>
         </a>
       </div>
-    </div>
+    </section>
   </header>
 
   <!-- About Me -->
-  <section id="about">
-    <div class="container">
+  <section id="about"class="container">
+    <div >
       <div class="row">
         <div class="six columns">
           <h1>Sobre Mí</h1>
