--- a/index.html
+++ b/index.html
@@ -11,13 +11,14 @@
   <link href="https://fonts.googleapis.com/css?family=Advent+Pro:200,400,700|Niramit" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Kranky&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap" rel="stylesheet">
   <!-- Íconos -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css"
     integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <link rel="stylesheet" href="src/css/styles.css">
-  <link rel="stylesheet" href="src/css/grid.css">
+  <link rel="stylesheet" href="src/css/layout.css">
   <link rel="stylesheet" href="src/css/navbar.css">
   <link rel="stylesheet" href="src/css/banner.css">
 </head>
@@ -31,8 +32,8 @@
         <nav>
           <ul>
             <li><a class="smoothscroll link-animation" href="#header">Home</a></li>
-            <li><a class="smoothscroll link-animation" href="#about">Sobre Mí</a></li>
             <li><a class="smoothscroll link-animation" href="#portfolio">Proyectos</a></li>
+            <li><a class="smoothscroll link-animation" href="#about">Sobre Mí</a></li>
             <li><a class="smoothscroll link-animation" href="#contact">Contacto</a></li>
           </ul>
         </nav>
@@ -42,8 +43,8 @@
       <div class="banner__overlay">
         <div class="banner__container">
           <div class="title">
-            <h1 class="heading"> Hello! My name is <span>Elizabeth</span></h1>
-            <h2 class="heading">and I'm a <span>Front End Developer</span> from Chile</h2>
+            <h1 class="heading"> Hola! Mi nombre es <span>Elizabeth</span></h1>
+            <h2 class="heading">y soy una <span>Front End Developer</span></h2>
             <a class="smoothscroll" href="#about">
               <div class="mouse">
                 <div class="wheel"></div>
@@ -59,66 +60,61 @@
   </header>
 
   <!-- About Me -->
-  <section id="about"class="container">
-    <div >
-      <div class="row">
-        <div class="six columns">
-          <h1>Sobre Mí</h1>
-          <div class="block"></div>
-          <p>Front-End Developer enfocada en el desarrollo de páginas y aplicaciones web de calidad, dinámicas y con un
-            alto enfoque en el usuario final. Busco combinar las mejores herramientas digitales de acuerdo a los
-            requerimientos del cliente.</p>
-          <p>Soy una persona curiosa en constante búsqueda de nuevos conocimientos, fascinada por el alcance de la
-            tecnología actual y cómo aporta a la vida de las personas.</p>
-        </div>
-        <div class="six columns">
-          <figure class="picture-animation">
-            <img src="src/img/profile.jpg" alt="profile-picture"/>
-          </figure>
-        </div>
+  <section id="about" class="container about-container">
+    <article class="row-direction">
+      <div class="eight-columns">
+        <h1>About Me</h1>
+        <div class="block"></div>
+        <p>Desarrolladora, mamá y ñoña, soy una persona muy curiosa en constante búsqueda de nuevos conocimientos, fascinada por el mundo de la tecnología y cómo aporta a la vida de las personas.</p>
+        <p>Comencé mi viaje en el mundo tech el 2018 cuando encontré <span><a href="https://www.laboratoria.la/" target="_blank">Laboratoria</a></span> y me convertí en parte del bootcamp de Desarrollo Web. En solo seis meses desarrollé las herramientas técnicas y profesionales para partir mi carrera en el mundo tech. Actualmente trabajo como <span>Coach</span> en el mismo bootcamp, lo que me ha hecho crecer como profesional y también comprender que no solo disfruto aprender, sino que además me encanta poder compartir lo que voy encontrando 💜</p>
       </div>
+      <div class="four-columns">
+        <figure class="picture-animation">
+          <img src="src/img/profile.jpg" alt="profile-picture" />
+        </figure>
+      </div>
+    </article>
+    <!-- <div class="row">
       <div class="row">
-        <div class="row">
-          <div class="twelve.columns">
-            <h3><span class="iconify icon" data-icon="typcn-device-desktop" data-inline="true"></span>Herramientas</h3>
-            <div class="row">
-              <div class="one.column icon-container">
-                <img src="src/img/2333390-html-html5-internet-website_85590.ico" alt="">
-              </div>
-              <div class="one.column icon-container">
-                <img src="src/img/2333399-code-css-css3-internet-websi_85585.ico" alt="">
-              </div>
-              <div class="one.column icon-container">
-                <img src="src/img/language_javascript_icon_135455.ico" alt="">
-              </div>
-              <div class="one.column icon-container">
-                <img src="src/img/Node-JS.png" alt="">
-              </div>
-              <div class="one.column icon-container">
-                <img src="src/img/react_icon_135264.ico" alt="">
-              </div>
-              <div class="one.column icon-container">
-                <img src="src/img/firebase_icon_134985.ico" alt="">
-              </div>
-              <div class="one.column icon-container">
-                <img src="src/img/github-1_icon-icons.com_71186.ico" alt="">
-              </div>
-              <div class="one.column icon-container">
-                <img src="src/img/markgithub_106479.ico" alt="">
-              </div>
-              <div class="one.column icon-container">
-                <img src="src/img/bootstrap_icon_135870.ico" alt="">
-              </div>
-              <div class="one.column icon-container">
-                <img src="src/img/material_ui_icon_137419.ico" alt="">
-              </div>
-              <div class="one.column icon-container"></div>
-              <div class="one.column icon-container"></div>
+        <div class="twelve.columns">
+          <h3><span class="iconify icon" data-icon="typcn-device-desktop" data-inline="true"></span>Herramientas</h3>
+          <div class="row">
+            <div class="one.column icon-container">
+              <img src="src/img/2333390-html-html5-internet-website_85590.ico" alt="">
             </div>
+            <div class="one.column icon-container">
+              <img src="src/img/2333399-code-css-css3-internet-websi_85585.ico" alt="">
+            </div>
+            <div class="one.column icon-container">
+              <img src="src/img/language_javascript_icon_135455.ico" alt="">
+            </div>
+            <div class="one.column icon-container">
+              <img src="src/img/Node-JS.png" alt="">
+            </div>
+            <div class="one.column icon-container">
+              <img src="src/img/react_icon_135264.ico" alt="">
+            </div>
+            <div class="one.column icon-container">
+              <img src="src/img/firebase_icon_134985.ico" alt="">
+            </div>
+            <div class="one.column icon-container">
+              <img src="src/img/github-1_icon-icons.com_71186.ico" alt="">
+            </div>
+            <div class="one.column icon-container">
+              <img src="src/img/markgithub_106479.ico" alt="">
+            </div>
+            <div class="one.column icon-container">
+              <img src="src/img/bootstrap_icon_135870.ico" alt="">
+            </div>
+            <div class="one.column icon-container">
+              <img src="src/img/material_ui_icon_137419.ico" alt="">
+            </div>
+            <div class="one.column icon-container"></div>
+            <div class="one.column icon-container"></div>
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
   </section>
 
   <!-- Team Section
