WIP projects card styles

--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
         <nav>
           <ul>
             <li><a class="smoothscroll link-animation" href="#header">Home</a></li>
-            <li><a class="smoothscroll link-animation" href="#portfolio">Proyectos</a></li>
             <li><a class="smoothscroll link-animation" href="#about">Sobre Mí</a></li>
+            <li><a class="smoothscroll link-animation" href="#projects">Proyectos</a></li>
             <li><a class="smoothscroll link-animation" href="#contact">Contacto</a></li>
           </ul>
         </nav>
@@ -60,13 +60,19 @@
   </header>
 
   <!-- About Me -->
-  <section id="about" class="container about-container">
+  <section id="about" class="container section-container">
     <article class="row-direction">
       <div class="eight-columns">
-        <h1>About Me</h1>
+        <h1>Sobre Mí</h1>
         <div class="block"></div>
-        <p>Desarrolladora, mamá y ñoña, soy una persona muy curiosa en constante búsqueda de nuevos conocimientos, fascinada por el mundo de la tecnología y cómo aporta a la vida de las personas.</p>
-        <p>Comencé mi viaje en el mundo tech el 2018 cuando encontré <span><a href="https://www.laboratoria.la/" target="_blank">Laboratoria</a></span> y me convertí en parte del bootcamp de Desarrollo Web. En solo seis meses desarrollé las herramientas técnicas y profesionales para partir mi carrera en el mundo tech. Actualmente trabajo como <span>Coach</span> en el mismo bootcamp, lo que me ha hecho crecer como profesional y también comprender que no solo disfruto aprender, sino que además me encanta poder compartir lo que voy encontrando 💜</p>
+        <p>Desarrolladora, mamá y ñoña, soy una persona muy curiosa en constante búsqueda de nuevos conocimientos,
+          fascinada por el mundo de la tecnología y cómo aporta a la vida de las personas.</p>
+        <p>Comencé mi viaje en el mundo tech el 2018 cuando encontré <span><a href="https://www.laboratoria.la/"
+              target="_blank">Laboratoria</a></span> y me convertí en parte del bootcamp de Desarrollo Web. En solo seis
+          meses desarrollé las herramientas técnicas y profesionales para partir mi carrera en el mundo tech.
+          Actualmente trabajo como <span>Coach</span> en el mismo bootcamp, lo que me ha hecho crecer como profesional y
+          también comprender que no solo disfruto aprender, sino que además me encanta poder compartir lo que voy
+          encontrando 💜</p>
       </div>
       <div class="four-columns">
         <figure class="picture-animation">
@@ -115,6 +121,62 @@
         </div>
       </div>
     </div> -->
+  </section>
+
+  <!-- Projects -->
+
+  <section id="projects">
+    <div class="container">
+      <h1>Proyectos</h1>
+      <div class="block"></div>
+      <p>Algunos de los proyectos que he realizado.</p>
+      <div class="row-direction">
+
+        <article class="project-card">
+          <figure class="snip1458">
+            <img src="src/img/pokemomory.png" alt="Captura proyecto Pokememory" />
+            <figcaption>
+              <h3>Pokememory</h3>
+            </figcaption>
+            <span>
+              <p>El clásico juego del "Memorice" con temática de Pokémon.</p>
+              <p>
+                <a href="https://elizabethvegam.github.io/pokememory/src/" target="_blank"
+                  class="waves-effect waves-light btn">DEMO</a>
+                <a href="https://github.com/ElizabethVegaM/pokememory" target="_blank" class="btn">CODE</a>
+              </p>
+            </span>
+          </figure>
+        </article>
+        <article class="project-card">
+          <figure class="snip1458">
+            <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sample57.jpg" alt="sample57" />
+            <figcaption>
+              <h3>Chauffina Carr</h3>
+            </figcaption><i class="ion-podium"></i>
+            <a href="#"></a>
+          </figure>
+        </article>
+        <article class="project-card">
+          <figure class="snip1458"><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sample59.jpg"
+              alt="sample59" />
+            <figcaption>
+              <h3>Fergus Douche</h3>
+            </figcaption><i class="ion-university"></i>
+            <a href="#"></a>
+          </figure>
+        </article>
+        <article class="project-card">
+          <figure class="snip1458"><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sample59.jpg"
+              alt="sample59" />
+            <figcaption>
+              <h3>Fergus Douche</h3>
+            </figcaption><i class="ion-university"></i>
+            <a href="#"></a>
+          </figure>
+        </article>
+      </div>
+    </div>
   </section>
 
   <!-- Team Section
@@ -225,27 +287,7 @@
     </div>
   </section>
 
-  <!-- Portfolio Section
-–––––––––––––––––––––––––––––––––––––––––––––––––– -->
 
-  <section id="portfolio">
-    <div class="container">
-      <h1>Work</h1>
-      <div class="block"></div>
-      <div class="row">
-        <div class="three columns"> <img src="http://placehold.it/220x220" class="image" alt="Work One" /></div>
-        <div class="three columns"> <img src="http://placehold.it/220x220" class="image" alt="Work Two" /></div>
-        <div class="three columns"> <img src="http://placehold.it/220x220" class="image" alt="Work Three" /></div>
-        <div class="three columns"> <img src="http://placehold.it/220x220" class="image" alt="Work Four" /></div>
-      </div>
-      <div class="row" style="margin-top: 30px;">
-        <div class="three columns"> <img src="http://placehold.it/220x220" class="image" alt="Work Five" /></div>
-        <div class="three columns"> <img src="http://placehold.it/220x220" class="image" alt="Work Six" /></div>
-        <div class="three columns"> <img src="http://placehold.it/220x220" class="image" alt="Work Seven" /></div>
-        <div class="three columns"> <img src="http://placehold.it/220x220" class="image" alt="Work Eight" /></div>
-      </div>
-    </div>
-  </section>
 
   <!-- Testimonials Section
 –––––––––––––––––––––––––––––––––––––––––––––––––– -->
