(styles): WIP project cards

--- a/index.html
+++ b/index.html
@@ -73,12 +73,34 @@
           Actualmente trabajo como <span>Coach</span> en el mismo bootcamp, lo que me ha hecho crecer como profesional y
           también comprender que no solo disfruto aprender, sino que además me encanta poder compartir lo que voy
           encontrando 💜</p>
+        <p>
+          Ahora con todos estos aprendizajes y herramientas estoy lista para embarcarme en una nueva aventura 🚀, busco
+          perfeccionarme en el stack MERN (Mongo - Express - React - Node) y aprender nuevas cosas especialmente sobre
+          servicios en la nube (voy por ti certificación de AWS!) 👀
+        </p>
       </div>
       <div class="four-columns">
         <figure class="picture-animation">
           <img src="src/img/profile.jpg" alt="profile-picture" />
         </figure>
       </div>
+    </article>
+    <article class="row-direction gallery-container">
+      <figure class="gallery-card">
+        <img src="src/img/IMG-20181026-WA0020.jpg" alt="gallery" />
+      </figure>
+      <figure class="gallery-card">
+        <img src="src/img/IMG-20181121-WA0016.jpg" alt="gallery" />
+      </figure>
+      <figure class="gallery-card">
+        <img src="src/img/IMG-20191121-WA0016.jpg" alt="gallery" />
+      </figure>
+      <figure class="gallery-card">
+        <img src="src/img/IMG-20191213-WA0006.jpg" alt="gallery" />
+      </figure>
+      <figure class="gallery-card">
+        <img src="src/img/IMG-20200508-WA0011.jpg" alt="gallery" />
+      </figure>
     </article>
     <!-- <div class="row">
       <div class="row">
@@ -129,9 +151,11 @@
     <div class="container">
       <h1>Proyectos</h1>
       <div class="block"></div>
-      <p>Algunos de los proyectos que he realizado.</p>
+      <p>Estos son algunos de los proyectos que he realizado. Mi stack tecnológico se compone de HTML, CSS, Javascript,
+        React.</p>
       <div class="row-direction">
 
+        <!-- Pokememory -->
         <article class="project-card">
           <figure class="snip1458">
             <img src="src/img/pokemomory.png" alt="Captura proyecto Pokememory" />
@@ -148,171 +172,108 @@
             </span>
           </figure>
         </article>
+
+        <!-- Burger Queen -->
         <article class="project-card">
           <figure class="snip1458">
-            <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sample57.jpg" alt="sample57" />
+            <img src="src/img/bq.png" alt="Captura proyecto Pokememory" />
             <figcaption>
-              <h3>Chauffina Carr</h3>
-            </figcaption><i class="ion-podium"></i>
-            <a href="#"></a>
+              <h3>Burger Queen</h3>
+            </figcaption>
+            <span>
+              <p>Servicio de toma de pedidos para una hamburguesería.</p>
+              <p>
+                <a href="https://lab-burger-queen.web.app/" target="_blank"
+                  class="waves-effect waves-light btn">DEMO</a>
+                <a href="https://github.com/ElizabethVegaM/Burger-Queen" target="_blank" class="btn">CODE</a>
+              </p>
+            </span>
           </figure>
         </article>
+
+        <!-- Battleship -->
         <article class="project-card">
-          <figure class="snip1458"><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sample59.jpg"
-              alt="sample59" />
+          <figure class="snip1458">
+            <img src="src/img/bq.png" alt="Captura proyecto Pokememory" />
             <figcaption>
-              <h3>Fergus Douche</h3>
-            </figcaption><i class="ion-university"></i>
-            <a href="#"></a>
+              <h3>Battleship</h3>
+            </figcaption>
+            <span>
+              <p>El juego de Batalla Naval en versión online para jugar de a 2 personas.</p>
+              <p>
+                <a href="https://battleship-prototype.web.app/" target="_blank"
+                  class="waves-effect waves-light btn">DEMO</a>
+                <a href="https://github.com/ElizabethVegaM/battleship" target="_blank" class="btn">CODE</a>
+              </p>
+            </span>
           </figure>
         </article>
+
+        <!-- Ghibli Lovers -->
         <article class="project-card">
-          <figure class="snip1458"><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sample59.jpg"
-              alt="sample59" />
+          <figure class="snip1458">
+            <img src="src/img/ghiblilovers.png" alt="Captura proyecto Pokememory" />
             <figcaption>
-              <h3>Fergus Douche</h3>
-            </figcaption><i class="ion-university"></i>
-            <a href="#"></a>
+              <h3>Ghibli Fan</h3>
+            </figcaption>
+            <span>
+              <p>App que muestra información sobre los proyectos de Studio Ghibli.</p>
+              <p>
+                <!--Cambiar link a DEMO-->
+                <a href="https://battleship-prototype.web.app/" target="_blank"
+                  class="waves-effect waves-light btn">DEMO</a>
+                <a href="https://github.com/ElizabethVegaM/ghibli-lovers/tree/master" target="_blank"
+                  class="btn">CODE</a>
+              </p>
+            </span>
           </figure>
         </article>
+
+        <!-- Ghibli Lovers -->
+        <article class="project-card">
+          <figure class="snip1458">
+            <img src="src/img/ghiblilovers.png" alt="Captura proyecto Pokememory" />
+            <figcaption>
+              <h3>Otro Proyecto</h3>
+            </figcaption>
+            <span>
+              <p>App que muestra información sobre los proyectos de Studio Ghibli.</p>
+              <p>
+                <!--Cambiar link a DEMO-->
+                <a href="https://battleship-prototype.web.app/" target="_blank"
+                  class="waves-effect waves-light btn">DEMO</a>
+                <a href="https://github.com/ElizabethVegaM/ghibli-lovers/tree/master" target="_blank"
+                  class="btn">CODE</a>
+              </p>
+            </span>
+          </figure>
+        </article>
+
+        <!-- Ghibli Lovers -->
+        <article class="project-card">
+          <figure class="snip1458">
+            <img src="src/img/ghiblilovers.png" alt="Captura proyecto Pokememory" />
+            <figcaption>
+              <h3>Otro Proyecto</h3>
+            </figcaption>
+            <span>
+              <p>App que muestra información sobre los proyectos de Studio Ghibli.</p>
+              <p>
+                <!--Cambiar link a DEMO-->
+                <a href="https://battleship-prototype.web.app/" target="_blank"
+                  class="waves-effect waves-light btn">DEMO</a>
+                <a href="https://github.com/ElizabethVegaM/ghibli-lovers/tree/master" target="_blank"
+                  class="btn">CODE</a>
+              </p>
+            </span>
+          </figure>
+        </article>
+
       </div>
     </div>
   </section>
 
-  <!-- Team Section
-–––––––––––––––––––––––––––––––––––––––––––––––––– -->
-
-  <section id="team">
-    <div class="container">
-      <div class="row">
-        <h1>Meet the Team</h1>
-        <div class="block"></div>
-        <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et
-          dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet
-          clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
-      </div>
-      <div class="row">
-        <div class="three columns"> <img src="http://placehold.it/220x220" width="220" height="220" alt="" />
-          <h4>Naruto Uzumaki</h4>
-          <p>Creative Director</p>
-          <span class="typcn typcn-social-facebook-circular icon"></span><span
-            class="typcn typcn-social-instagram-circular icon"></span><span
-            class="typcn typcn-social-google-plus-circular icon"></span><span
-            class="typcn typcn-social-linkedin-circular icon"></span>
-        </div>
-        <div class="three columns"> <img src="http://placehold.it/220x220" width="220" height="220" alt="" />
-          <h4>Sasuke Uchiha</h4>
-          <p>Lead Designer</p>
-          <span class="typcn typcn-social-facebook-circular icon"></span><span
-            class="typcn typcn-social-instagram-circular icon"></span><span
-            class="typcn typcn-social-google-plus-circular icon"></span><span
-            class="typcn typcn-social-linkedin-circular icon"></span>
-        </div>
-        <div class="three columns"> <img src="http://placehold.it/220x220" width="220" height="220" alt="" />
-          <h4>Shikamaru Nara</h4>
-          <p>Designer</p>
-          <span class="typcn typcn-social-facebook-circular icon"></span><span
-            class="typcn typcn-social-instagram-circular icon"></span><span
-            class="typcn typcn-social-google-plus-circular icon"></span><span
-            class="typcn typcn-social-linkedin-circular icon"></span>
-        </div>
-        <div class="three columns"> <img src="http://placehold.it/220x220" width="220" height="220" alt="" />
-          <h4>Sakura Haruno</h4>
-          <p>Designer</p>
-          <span class="typcn typcn-social-facebook-circular icon"></span><span
-            class="typcn typcn-social-instagram-circular icon"></span><span
-            class="typcn typcn-social-google-plus-circular icon"></span><span
-            class="typcn typcn-social-linkedin-circular icon"></span>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <!-- Skills Section
-–––––––––––––––––––––––––––––––––––––––––––––––––– -->
-
-  <section id="skills">
-    <div class="container">
-      <h1>Services</h1>
-      <div class="block"></div>
-      <div class="row">
-        <div class="one-third column">
-          <h3>Design</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum, recusandae, at, labore velit eligendi
-            amet nobis repellat natus.</p>
-        </div>
-        <div class="one-third column">
-          <h3>Development</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum, recusandae, at, labore velit eligendi
-            amet nobis repellat natus.</p>
-        </div>
-        <div class="one-third column">
-          <h3>Marketing</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum, recusandae, at, labore velit eligendi
-            amet nobis repellat natus.</p>
-        </div>
-      </div>
-      <div class="row">
-        <div class="eight columns">
-          <div class="progressBar">
-            <h4>HTML5</h4>
-            <div class="progressBarContainer">
-              <div class="progressBarValue value-90"></div>
-            </div>
-          </div>
-          <div class="progressBar">
-            <h4>CSS3</h4>
-            <div class="progressBarContainer">
-              <div class="progressBarValue value-80"></div>
-            </div>
-          </div>
-          <div class="progressBar">
-            <h4>Jquery</h4>
-            <div class="progressBarContainer">
-              <div class="progressBarValue value-30"></div>
-            </div>
-          </div>
-          <div class="progressBar">
-            <h4>WordPress</h4>
-            <div class="progressBarContainer">
-              <div class="progressBarValue value-70"></div>
-            </div>
-          </div>
-        </div>
-        <div class="four columns">
-          <p>Lorem ipsum dolor sit amet, enim soluta consectetur adipisicing elit. Sit, eius, itaque, porro, beatae
-            impedit officia tenetur reiciendis in quia eum autem. Enim soluta consectetur adipisicing elit.</p>
-        </div>
-      </div>
-    </div>
-  </section>
-
-
-
-  <!-- Testimonials Section
-–––––––––––––––––––––––––––––––––––––––––––––––––– -->
-
-  <section id="testimonial">
-    <div class="container">
-      <div class="quoteLoop">
-        <blockquote class="quote"> <img src="http://placehold.it/100x100" width="100" height="100" alt="" />
-          <h5>&nbsp;<br>
-            &rdquo;Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-            et dolore magna aliqua.&rdquo;<br>
-            <small>Steve Bruce, Sed ut perspiciatis unde omnis</small></h5>
-        </blockquote>
-        <blockquote class="quote"> <img src="http://placehold.it/100x100" width="100" height="100" alt="" />
-          <h5>&nbsp;<br>
-            &ldquo;Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium,
-            totam rem aperiam.&rdquo;<br>
-            <small>Tom Jones, Sed ut perspiciatis unde omnis</small></h5>
-        </blockquote>
-      </div>
-    </div>
-  </section>
-
-  <!-- Contact Section
-–––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <!-- Contacto -->
 
   <section id="contact">
     <div class="container">
