styles: contact and responsive design

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-  <title>Elizabeth Vega Portafolio</title>
+  <title>Elizabeth Vega Front-End Dev</title>
   <!-- Tipografía -->
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css?family=Advent+Pro:200,400,700|Niramit" rel="stylesheet">
@@ -157,7 +157,7 @@
 
         <!-- Pokememory -->
         <article class="project-card">
-          <figure class="snip1458">
+          <figure class="project-figure">
             <img src="src/img/pokemomory.png" alt="Captura proyecto Pokememory" />
             <figcaption>
               <h3>Pokememory</h3>
@@ -175,7 +175,7 @@
 
         <!-- Burger Queen -->
         <article class="project-card">
-          <figure class="snip1458">
+          <figure class="project-figure">
             <img src="src/img/bq.png" alt="Captura proyecto Pokememory" />
             <figcaption>
               <h3>Burger Queen</h3>
@@ -193,7 +193,7 @@
 
         <!-- Battleship -->
         <article class="project-card">
-          <figure class="snip1458">
+          <figure class="project-figure">
             <img src="src/img/bq.png" alt="Captura proyecto Pokememory" />
             <figcaption>
               <h3>Battleship</h3>
@@ -211,7 +211,7 @@
 
         <!-- Ghibli Lovers -->
         <article class="project-card">
-          <figure class="snip1458">
+          <figure class="project-figure">
             <img src="src/img/ghiblilovers.png" alt="Captura proyecto Pokememory" />
             <figcaption>
               <h3>Ghibli Fan</h3>
@@ -231,7 +231,7 @@
 
         <!-- Ghibli Lovers -->
         <article class="project-card">
-          <figure class="snip1458">
+          <figure class="project-figure">
             <img src="src/img/ghiblilovers.png" alt="Captura proyecto Pokememory" />
             <figcaption>
               <h3>Otro Proyecto</h3>
@@ -251,7 +251,7 @@
 
         <!-- Ghibli Lovers -->
         <article class="project-card">
-          <figure class="snip1458">
+          <figure class="project-figure">
             <img src="src/img/ghiblilovers.png" alt="Captura proyecto Pokememory" />
             <figcaption>
               <h3>Otro Proyecto</h3>
@@ -277,51 +277,48 @@
 
   <section id="contact">
     <div class="container">
-      <h1>Contact</h1>
+      <h1>Contáctame</h1>
       <div class="block"></div>
-      <form>
-        <div class="row">
-          <div class="six columns">
-            <label for="exampleRecipientInput">Name</label>
-            <input class="u-full-width" type="text">
+      <!-- Side Buttons -->
+      <div class="contact-info">
+        <p>Si estás interesad@ en mi trabajo o deseas conocer un poco más, te invito a contactarme a través de los
+          siguientes medios 📌</p>
+      </div>
+      <div class="row-direction">
+        <div class="sn-links">
+          <div class="round-btn">
+            <i class="fas fa-envelope"></i>
           </div>
-          <div class="six columns">
-            <label for="exampleEmailInput">Email</label>
-            <input class="u-full-width" type="email">
+          <a>eb.vega.m@gmail.com</a>
+        </div>
+        <div class="sn-links">
+          <div class="round-btn">
+            <i class="fab fa-github-alt"></i>
           </div>
+          <a href="https://github.com/ElizabethVegaM" target="_blank">ElizabethVegaM</a>
         </div>
-        <div class="row">
-          <label for="exampleMessage">Message</label>
-          <textarea class="u-full-width"></textarea>
-          <input class="button-primary" type="submit" value="Submit">
+        <div class="sn-links">
+          <div class="round-btn">
+            <i class="fab fa-linkedin-in"></i>
+          </div>
+          <a href="https://www.linkedin.com/in/elizabeth-vega-medina/" target="_blank">elizabeth-vega-medina</a>
         </div>
-      </form>
+        <div class="sn-links">
+          <div class="round-btn">
+            <i class="fas fa-file"></i>
+          </div>
+          <a href="src/Elizabeth Vega.pdf" target="_blank" download>CV Online</a>
+        </div>
+      </div>
     </div>
   </section>
-
-  <!-- Footer Section
-–––––––––––––––––––––––––––––––––––––––––––––––––– -->
-
-  <footer>
-    <div class="container">
-      <div class="nine columns">
-        <p>Created with love by Jeff.</p>
-      </div>
-      <div class="three columns"> <span class="typcn typcn-social-facebook-circular socialIcons"></span> <span
-          class="typcn typcn-social-instagram-circular socialIcons"></span> <span
-          class="typcn typcn-social-google-plus-circular socialIcons"></span> <span
-          class="typcn typcn-social-linkedin-circular socialIcons"></span> </div>
-    </div>
-  </footer>
 
   <!-- Compiled and minified JavaScript -->
   <script src="https://code.jquery.com/jquery-3.3.1.min.js"
     integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
   <!-- Icons -->
   <script src="https://code.iconify.design/1/1.0.4/iconify.min.js"></script>
-  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <script src="src/app.js"></script>
-  <script src="src/background.js"></script>
 
 </body>
 
