styles: adds two projects and fixes minor styles

--- a/index.html
+++ b/index.html
@@ -102,47 +102,6 @@
         <img src="src/img/IMG-20200508-WA0011.jpg" alt="gallery" />
       </figure>
     </article>
-    <!-- <div class="row">
-      <div class="row">
-        <div class="twelve.columns">
-          <h3><span class="iconify icon" data-icon="typcn-device-desktop" data-inline="true"></span>Herramientas</h3>
-          <div class="row">
-            <div class="one.column icon-container">
-              <img src="src/img/2333390-html-html5-internet-website_85590.ico" alt="">
-            </div>
-            <div class="one.column icon-container">
-              <img src="src/img/2333399-code-css-css3-internet-websi_85585.ico" alt="">
-            </div>
-            <div class="one.column icon-container">
-              <img src="src/img/language_javascript_icon_135455.ico" alt="">
-            </div>
-            <div class="one.column icon-container">
-              <img src="src/img/Node-JS.png" alt="">
-            </div>
-            <div class="one.column icon-container">
-              <img src="src/img/react_icon_135264.ico" alt="">
-            </div>
-            <div class="one.column icon-container">
-              <img src="src/img/firebase_icon_134985.ico" alt="">
-            </div>
-            <div class="one.column icon-container">
-              <img src="src/img/github-1_icon-icons.com_71186.ico" alt="">
-            </div>
-            <div class="one.column icon-container">
-              <img src="src/img/markgithub_106479.ico" alt="">
-            </div>
-            <div class="one.column icon-container">
-              <img src="src/img/bootstrap_icon_135870.ico" alt="">
-            </div>
-            <div class="one.column icon-container">
-              <img src="src/img/material_ui_icon_137419.ico" alt="">
-            </div>
-            <div class="one.column icon-container"></div>
-            <div class="one.column icon-container"></div>
-          </div>
-        </div>
-      </div>
-    </div> -->
   </section>
 
   <!-- Projects -->
@@ -151,8 +110,8 @@
     <div class="container">
       <h1>Proyectos</h1>
       <div class="block"></div>
-      <p>Estos son algunos de los proyectos que he realizado. Mi stack tecnológico se compone de HTML, CSS, Javascript,
-        React.</p>
+      <p>Estos son algunos de los proyectos que he realizado. Entre las tecnologías que uso están HTML, CSS, Javascript,
+        React y Node.</p>
       <div class="row-direction">
 
         <!-- Pokememory -->
@@ -176,7 +135,7 @@
         <!-- Burger Queen -->
         <article class="project-card">
           <figure class="project-figure">
-            <img src="src/img/bq.png" alt="Captura proyecto Pokememory" />
+            <img src="src/img/bq.png" alt="Captura proyecto Burger Queen" />
             <figcaption>
               <h3>Burger Queen</h3>
             </figcaption>
@@ -194,7 +153,7 @@
         <!-- Battleship -->
         <article class="project-card">
           <figure class="project-figure">
-            <img src="src/img/bq.png" alt="Captura proyecto Pokememory" />
+            <img src="src/img/battleship.png" alt="Captura proyecto Battleship" />
             <figcaption>
               <h3>Battleship</h3>
             </figcaption>
@@ -212,15 +171,14 @@
         <!-- Ghibli Lovers -->
         <article class="project-card">
           <figure class="project-figure">
-            <img src="src/img/ghiblilovers.png" alt="Captura proyecto Pokememory" />
+            <img src="src/img/ghiblilovers.png" alt="Captura proyecto Ghibli Lovers" />
             <figcaption>
               <h3>Ghibli Fan</h3>
             </figcaption>
             <span>
               <p>App que muestra información sobre los proyectos de Studio Ghibli.</p>
               <p>
-                <!--Cambiar link a DEMO-->
-                <a href="https://battleship-prototype.web.app/" target="_blank"
+                <a href="https://ghibli-lovers.netlify.app/" target="_blank"
                   class="waves-effect waves-light btn">DEMO</a>
                 <a href="https://github.com/ElizabethVegaM/ghibli-lovers/tree/master" target="_blank"
                   class="btn">CODE</a>
@@ -229,40 +187,37 @@
           </figure>
         </article>
 
-        <!-- Ghibli Lovers -->
+        <!-- MD Links -->
         <article class="project-card">
           <figure class="project-figure">
-            <img src="src/img/ghiblilovers.png" alt="Captura proyecto Pokememory" />
+            <img src="src/img/mdlinks.png" alt="Captura proyecto Markdown Links" />
             <figcaption>
-              <h3>Otro Proyecto</h3>
+              <h3>MD Links</h3>
             </figcaption>
             <span>
-              <p>App que muestra información sobre los proyectos de Studio Ghibli.</p>
+              <p>Librería que analiza archivos '.md' para verificar los links que contengan y entregar algunas estadísticas.</p>
               <p>
-                <!--Cambiar link a DEMO-->
-                <a href="https://battleship-prototype.web.app/" target="_blank"
-                  class="waves-effect waves-light btn">DEMO</a>
-                <a href="https://github.com/ElizabethVegaM/ghibli-lovers/tree/master" target="_blank"
+                <a href="https://github.com/ElizabethVegaM/md-links-2.0" target="_blank"
                   class="btn">CODE</a>
               </p>
             </span>
           </figure>
         </article>
 
-        <!-- Ghibli Lovers -->
+        <!-- ConectApp Alumnos -->
         <article class="project-card">
           <figure class="project-figure">
-            <img src="src/img/ghiblilovers.png" alt="Captura proyecto Pokememory" />
+            <img src="src/img/ghiblilovers.png" alt="Captura proyecto ConectApp Alumnos" />
             <figcaption>
-              <h3>Otro Proyecto</h3>
+              <h3>ConectApp Alumnos</h3>
             </figcaption>
             <span>
-              <p>App que muestra información sobre los proyectos de Studio Ghibli.</p>
+              <p>Red Social para comunicación de alumnos y profesores.</p>
               <p>
                 <!--Cambiar link a DEMO-->
-                <a href="https://battleship-prototype.web.app/" target="_blank"
+                <a href="https://social-network-d7373.firebaseapp.com/" target="_blank"
                   class="waves-effect waves-light btn">DEMO</a>
-                <a href="https://github.com/ElizabethVegaM/ghibli-lovers/tree/master" target="_blank"
+                <a href="https://github.com/ElizabethVegaM/conectapp-alumnos" target="_blank"
                   class="btn">CODE</a>
               </p>
             </span>
