--- a/index.html
+++ b/index.html
@@ -128,6 +128,11 @@
                   class="waves-effect waves-light btn">DEMO</a>
                 <a href="https://github.com/ElizabethVegaM/pokememory" target="_blank" class="btn">CODE</a>
               </p>
+              <p class="tech-icons">
+                <img src="src/img/html-logo.png" alt="HTML logo in white" class="tech-icon">
+                <img src="src/img/css-logo.png" alt="CSS logo in white" class="tech-icon">
+                <img src="src/img/js-logo.png" alt="Javascript logo in white" class="tech-icon">
+              </p>
             </span>
           </figure>
         </article>
@@ -146,6 +151,11 @@
                   class="waves-effect waves-light btn">DEMO</a>
                 <a href="https://github.com/ElizabethVegaM/Burger-Queen" target="_blank" class="btn">CODE</a>
               </p>
+              <p class="tech-icons">
+                <img src="src/img/react-logo.png" alt="React logo in white" class="tech-icon">
+                <img src="src/img/material-logo.png" alt="Material UI logo in white" class="tech-icon">
+                <img src="src/img/firebase-logo.png" alt="Firebase logo in white" class="tech-icon">
+              </p>
             </span>
           </figure>
         </article>
@@ -163,6 +173,11 @@
                 <a href="https://battleship-prototype.web.app/" target="_blank"
                   class="waves-effect waves-light btn">DEMO</a>
                 <a href="https://github.com/ElizabethVegaM/battleship" target="_blank" class="btn">CODE</a>
+              </p>
+              <p class="tech-icons">
+                <img src="src/img/react-logo.png" alt="React logo in white" class="tech-icon">
+                <img src="src/img/material-logo.png" alt="Material UI logo in white" class="tech-icon">
+                <img src="src/img/firebase-logo.png" alt="Firebase logo in white" class="tech-icon">
               </p>
             </span>
           </figure>
@@ -183,6 +198,10 @@
                 <a href="https://github.com/ElizabethVegaM/ghibli-lovers/tree/master" target="_blank"
                   class="btn">CODE</a>
               </p>
+              <p class="tech-icons">
+                <img src="src/img/react-logo.png" alt="React logo in white" class="tech-icon">
+                <img src="src/img/css-logo.png" alt="CSS logo in white" class="tech-icon">
+              </p>
             </span>
           </figure>
         </article>
@@ -195,10 +214,14 @@
               <h3>MD Links</h3>
             </figcaption>
             <span>
-              <p>Librería que analiza archivos '.md' para verificar los links que contengan y entregar algunas estadísticas.</p>
+              <p>Librería que analiza archivos '.md' para buscar links y dar estadísticas.</p>
               <p>
                 <a href="https://github.com/ElizabethVegaM/md-links-2.0" target="_blank"
                   class="btn">CODE</a>
+              </p>
+              <p class="tech-icons">
+                <img src="src/img/node-logo.png" alt="NodeJS logo in white" class="tech-icon">
+                <img src="src/img/npm-logo.png" alt="Node Package Manager (npm) logo in white" class="tech-icon">
               </p>
             </span>
           </figure>
@@ -207,18 +230,22 @@
         <!-- ConectApp Alumnos -->
         <article class="project-card">
           <figure class="project-figure">
-            <img src="src/img/ghiblilovers.png" alt="Captura proyecto ConectApp Alumnos" />
+            <img src="src/img/conectapp.png" alt="Captura proyecto ConectApp Alumnos" />
             <figcaption>
               <h3>ConectApp Alumnos</h3>
             </figcaption>
             <span>
               <p>Red Social para comunicación de alumnos y profesores.</p>
               <p>
-                <!--Cambiar link a DEMO-->
                 <a href="https://social-network-d7373.firebaseapp.com/" target="_blank"
                   class="waves-effect waves-light btn">DEMO</a>
                 <a href="https://github.com/ElizabethVegaM/conectapp-alumnos" target="_blank"
                   class="btn">CODE</a>
+              </p>
+              <p class="tech-icons">
+                <img src="src/img/html-logo.png" alt="HTML logo in white" class="tech-icon">
+                <img src="src/img/css-logo.png" alt="Css logo in white" class="tech-icon">
+                <img src="src/img/js-logo.png" alt="Javascript logo in white" class="tech-icon">
               </p>
             </span>
           </figure>
