adds lastname to front page

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <div class="banner__overlay">
         <div class="banner__container">
           <div class="title">
-            <h1 class="heading"> Hola! Mi nombre es <span>Elizabeth</span></h1>
+            <h1 class="heading"> Hola! Mi nombre es <span>Elizabeth Vega</span></h1>
             <h2 class="heading">y soy una <span>Front End Developer</span></h2>
             <a class="smoothscroll" href="#about">
               <div class="mouse">
